Fixed alignment issues in navbar

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 72px;
+    height: 83px;
     background: #fff;
     z-index: 1000;
     display: flex;
@@ -38,7 +38,7 @@
 .nav .left .logo {
     display: block;
     height: 42px;
-    margin-right: 20px;
+    margin-right: 45px;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -51,7 +51,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    font-size: 16px;
+    font-size: 13.5px;
     cursor: pointer;
 }
 
